added autocomplete to login

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,11 +18,8 @@
                         placeholder="Hive Account Name"
                         list="nameList"
                     />
-                    <datalist id="nameList">
-                        <option>name</option>
-                    </datalist>
-                <!-- <div id="match-list"></div>
-                </div> -->
+                <div id="match-list"></div>
+                </div>
             </div>
         </div>
     </div>
