Sighh... back to square one

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,9 +18,8 @@
                         placeholder="Hive Account Name"
                         list="nameList"
                     />
-                    <datalist id="nameList">
-                        <option>name</option>
-                    </datalist>
+                    <div id="nameList">
+                    </div>
                 <!-- <div id="match-list"></div>
                 </div> -->
             </div>
